Filtered blogs spacing fix

--- a/components/FilteredBlogs/index.module.scss
+++ b/components/FilteredBlogs/index.module.scss
@@ -3,6 +3,7 @@
 .filteredBlogs {
 	width: 100%;
 	height: 100%;
+	min-width: 30rem;
 	margin-bottom: 2rem;
 }
 
